Added style for register, login and confirm

--- a/src/styles/elements/page.scss
+++ b/src/styles/elements/page.scss
@@ -1,6 +1,6 @@
 html,
 body {
     font: 16px/1.5 'Sora';
-    // background: var(--global-xx-light);
-    // color: var(--global-xxx-dark);
+    background: var(--global-xx-dark);
+    color: var(--global-xx-light);
 }
