--- a/src/styles/elements/root.scss
+++ b/src/styles/elements/root.scss
@@ -1,3 +1,11 @@
 :root {
+    --global-alpha: #FF605A;
 
+    --global-xx-light: #FFFFFF;
+    --global-x-light: #A2A8B0;
+    --global-light: #5B5E63;
+    --global-dark: #292A2E;
+    --global-x-dark: #2C2D30;
+    --global-xx-dark: #17181A;
+    --global-xx-dark: #151617;
 }
