--- a/src/styles/elements/root.scss
+++ b/src/styles/elements/root.scss
@@ -7,5 +7,5 @@
     --global-dark: #292A2E;
     --global-x-dark: #2C2D30;
     --global-xx-dark: #17181A;
-    --global-xx-dark: #151617;
+    --global-xxx-dark: #151617;
 }
