--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -20,9 +20,11 @@
 
 // components
 @import "./components/button.scss";
+@import "./components/navbar.scss";
 @import "./components/input.scss";
 @import "./components/link.scss";
 @import "./components/switch.scss";
+@import "./components/header.scss";
 
 
 // utilities
