--- a/src/styles/elements/container.scss
+++ b/src/styles/elements/container.scss
@@ -1,5 +1,10 @@
-.e-container__small {
-    max-width: 20rem;
+.e-container {
+    max-width: 52rem;
     margin: 0 auto;
-    text-align: center;
+
+    &__small {
+        max-width: 20rem;
+        margin: 0 auto;
+        text-align: center;
+    }
 }
