--- a/src/styles/utilities/flex.scss
+++ b/src/styles/utilities/flex.scss
@@ -14,18 +14,18 @@
 //     justify-content: center;
 // }
 
-// .u-justify-end {
-//     justify-content: flex-end;
-// }
+.u-justify-end {
+    justify-content: flex-end;
+}
 
-// .u-justify-space-between {
-//     justify-content: space-between;
-// }
+.u-justify-space-between {
+    justify-content: space-between;
+}
 
 .u-direction-column {
     flex-direction: column;
 }
 
-// .u-wrap {
-//     flex-wrap: wrap;
-// }
+.u-wrap {
+    flex-wrap: wrap;
+}
