Added add & join classroom & popups

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -22,6 +22,19 @@
         }
     }
 
+    &__normal {
+        all: unset;
+        color: var(--global-xx-light);
+        background: var(--global-alpha);
+        border-radius: 0.5rem;
+        padding: 0.5rem 1rem;
+        cursor: pointer;
+    
+        &:hover {
+            opacity: 0.9;
+        }
+    }
+
     &__icon {
         all: unset;
         stroke: var(--global-x-light);
