--- a/src/styles/elements/root.scss
+++ b/src/styles/elements/root.scss
@@ -8,4 +8,6 @@
     --global-x-dark: #2C2D30;
     --global-xx-dark: #17181A;
     --global-xxx-dark: #151617;
+
+    --global-opacity-popup: rgba(23, 24, 26, 0.9);
 }
