--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -26,6 +26,7 @@
 @import "./components/switch.scss";
 @import "./components/header.scss";
 @import "./components/bigitem.scss";
+@import "./components/popup.scss";
 
 
 // utilities
