--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -25,7 +25,7 @@
 @import "./components/link.scss";
 @import "./components/switch.scss";
 @import "./components/header.scss";
-@import "./components/bigitem.scss";
+@import "./components/classelement.scss";
 @import "./components/popup.scss";
 
 
