--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -26,7 +26,7 @@
         border-radius: 1.25rem;
         overflow: hidden;
 
-        img {
+        svg {
             width: 100%;
             height: 100%;
         }
