Added profile markup

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -15,6 +15,7 @@
         border-radius: 0.5rem;
         padding: 0.75rem 0;
         width: 100%;
+        text-align: center;
         cursor: pointer;
     
         &:hover {
