--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -33,3 +33,5 @@
 @import "./utilities/margin.scss";
 @import "./utilities/color.scss";
 @import "./utilities/flex.scss";
+@import "./utilities/weight.scss";
+@import "./utilities/width.scss";
