Added select input & update editor

--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -20,6 +20,7 @@
 
 // components
 @import "./components/button.scss";
+@import "./components/select.scss";
 @import "./components/navbar.scss";
 @import "./components/input.scss";
 @import "./components/link.scss";
