--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -1,4 +1,4 @@
-.c-input {
+.c-select {
     position: relative;
 
     &__container {
@@ -6,7 +6,7 @@
         width: 100%;
         text-align: left;
     }
-    
+
     &__label {
         display: block;
         font-size: 0.75rem;
@@ -14,11 +14,11 @@
     }
 
     &__symbol {
-        width: 1.25rem;
         position: absolute;
-        left: 0.5rem;
-        top: 0.5rem;
+        right: 0.5rem;
+        top: 0.6rem;
         stroke: var(--global-x-light);
+        pointer-events: none;
     }
 
     &__field {
@@ -28,8 +28,11 @@
         border: 2px solid #5B5E63;
         border-radius: 0.35rem;
         padding: 0.5rem;
-        padding-left: 2rem;
-        cursor: text;
-        width: calc(100% - calc(2.5rem + 4px));
+        padding-left: 1rem;
+        width: calc(100% - calc(1.75rem));
+
+        &[data-selected=""] {
+            color: var(--global-light);
+        }
     }
 }
