Added error handling styling and simple logic

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -21,6 +21,11 @@
         &:hover {
             opacity: 0.9;
         }
+
+        &:focus {
+            // TODO
+            box-shadow: 0 0 4px 2px var(--global-red);
+        }
     }
 
     &__normal {
