--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -12,7 +12,7 @@
     box-shadow: rgba(0, 0, 0, 0.24) 3px 0px 8px;
 
     &__profile {
-        background: var(--global-light);
+        background: var(--global-dark);
         width: 3.5rem;
         height: 3.5rem;
         display: flex;
