--- a/src/styles/components/select.scss
+++ b/src/styles/components/select.scss
@@ -34,5 +34,9 @@
         &[data-selected=""] {
             color: var(--global-light);
         }
+
+        &:focus {
+            border: var(--global-focus-border);
+        }
     }
 }
