--- a/src/styles/utilities/margin.scss
+++ b/src/styles/utilities/margin.scss
@@ -18,6 +18,10 @@
     margin-bottom: 2rem;
 }
 
+.u-margin-bottom-x-md {
+    margin-bottom: 1.5rem;
+}
+
 .u-margin-bottom-md {
     margin-bottom: 1rem;
 }
