--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -24,12 +24,39 @@
     &__field {
         all: unset;
         color: var(--global-xx-light);
-        background: #2C2D30;
-        border: 2px solid #5B5E63;
+        background: var(--global-x-dark);
+        border: 2px solid var(--global-light);
         border-radius: 0.35rem;
         padding: 0.5rem;
         padding-left: 2rem;
         cursor: text;
         width: calc(100% - calc(2.5rem + 4px));
+
+        &:focus {
+            border: var(--global-focus-border);
+        }
+    }
+
+    &__error {
+        font-size: 0.75rem;
+        color: var(--global-red);
+        font-weight: 700;
+
+        &-container {
+            position: absolute;
+            margin-top: 0.2rem;
+
+            svg {
+                stroke: var(--global-red);
+                margin-right: 0.25rem;
+            }
+        }
+    }
+}
+
+.c-input {
+    &__container-error &__field {
+        border: 2px solid var(--global-red);
+        background: var(--global-opacity-red);
     }
 }
