--- a/src/styles/components/switch.scss
+++ b/src/styles/components/switch.scss
@@ -9,6 +9,7 @@
         border-radius: 0.25rem;
         padding: 0.25rem;
         cursor: pointer;
+        border: 2px solid transparent;
         
         &-selected {
             background: var(--global-light);
@@ -16,6 +17,10 @@
 
         &:hover {
             opacity: 0.8;
+        }
+
+        &:focus {
+            border: var(--global-focus-border);
         }
     }
 }
