--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -27,6 +27,7 @@
 @import "./components/switch.scss";
 @import "./components/header.scss";
 @import "./components/classelement.scss";
+@import "./components/userelement.scss";
 @import "./components/popup.scss";
 
 
