--- a/src/styles/utilities/margin.scss
+++ b/src/styles/utilities/margin.scss
@@ -26,6 +26,10 @@
     margin-bottom: 1rem;
 }
 
+.u-margin-right-x-lg {
+    margin-right: 4rem;
+}
+
 .u-margin-right-md {
     margin-right: 1rem;
 }
