--- a/src/styles/components/userelement.scss
+++ b/src/styles/components/userelement.scss
@@ -1,11 +1,11 @@
-.c-classelements {
+.c-userelements {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     gap: 2rem;
 }
 
-.c-classelement {
+.c-userelement {
     position: relative;
     border: 1px solid var(--global-x-light);
     background: var(--global-dark);
@@ -13,8 +13,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 14rem;
-    width: 12rem;
+    height: 12rem;
+    width: 10rem;
     border-radius: 0.5rem;
     cursor: pointer;
 
@@ -39,6 +39,7 @@
         font-size: 1.25rem;
         font-weight: 400;
         margin: 0;
+        text-align: center;
     }
 
     &-add {
@@ -46,12 +47,17 @@
         background: none;
     }
 
-    &__createdby {
-        position: absolute;
-        right: 0.5rem;
-        bottom: 0.5rem;
-        margin: 0;
-        color: var(--global-x-light);
+    &__avatar {
+        width: 4rem;
+        height: 4rem;
+        border-radius: 2rem;
+        margin-bottom: 1rem;
+        overflow: hidden;
+
+        svg {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     &:hover {
