--- a/src/styles/utilities/flex.scss
+++ b/src/styles/utilities/flex.scss
@@ -10,9 +10,9 @@
 //     align-items: flex-start;
 // }
 
-// .u-justify-center {
-//     justify-content: center;
-// }
+.u-justify-center {
+    justify-content: center;
+}
 
 .u-justify-end {
     justify-content: flex-end;
