--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -37,3 +37,4 @@
 @import "./utilities/flex.scss";
 @import "./utilities/weight.scss";
 @import "./utilities/width.scss";
+@import "./utilities/fontsize.scss";
