--- a/src/styles/components/classelement.scss
+++ b/src/styles/components/classelement.scss
@@ -48,10 +48,11 @@
 
     &__createdby {
         position: absolute;
+        font-size: 0.75rem;
         right: 0.5rem;
         bottom: 0.5rem;
-        margin: 0;
         color: var(--global-x-light);
+        margin: 0;
     }
 
     &:hover {
