--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -30,6 +30,8 @@
 @import "./components/userelement.scss";
 @import "./components/popup.scss";
 
+@import "./components/test.scss";
+
 
 // utilities
 @import "./utilities/margin.scss";
