Added category to assignments

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -72,6 +72,11 @@
             stroke: var(--global-xx-light);
             background: var(--global-alpha);
         }
+
+        &-orange {
+            stroke: var(--global-xx-light);
+            background: var(--global-orange);
+        }
         
         &-empty {
             stroke: var(--global-xx-light);
