--- a/src/styles/elements/root.scss
+++ b/src/styles/elements/root.scss
@@ -12,6 +12,8 @@
     --global-red: #FF2D26;
     --global-opacity-red: rgba(255, 45, 38, 0.1);
 
+    --global-orange: #FFBF47;
+
     --global-opacity-popup: rgba(23, 24, 26, 0.9);
 
     --global-focus-border: 2px solid var(--global-alpha);
