--- a/src/styles/utilities/margin.scss
+++ b/src/styles/utilities/margin.scss
@@ -30,6 +30,10 @@
     margin-right: 4rem;
 }
 
+.u-margin-right-lg {
+    margin-right: 2rem;
+}
+
 .u-margin-right-md {
     margin-right: 1rem;
 }
