Added update category & get, add and update assignment

--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -28,6 +28,7 @@
 @import "./components/header.scss";
 @import "./components/classelement.scss";
 @import "./components/userelement.scss";
+@import "./components/assignmentelement.scss";
 @import "./components/popup.scss";
 
 @import "./components/test.scss";
@@ -38,5 +39,6 @@
 @import "./utilities/color.scss";
 @import "./utilities/flex.scss";
 @import "./utilities/weight.scss";
+@import "./utilities/height.scss";
 @import "./utilities/width.scss";
 @import "./utilities/fontsize.scss";
