--- a/src/styles/utilities/margin.scss
+++ b/src/styles/utilities/margin.scss
@@ -38,6 +38,14 @@
     margin-right: 1rem;
 }
 
+.u-margin-right-x-md {
+    margin-right: 0.75rem;
+}
+
+.u-margin-right-sm {
+    margin-right: 0.5rem;
+}
+
 .u-margin-right-x-sm {
     margin-right: 0.25rem;
 }
