--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -16,6 +16,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        z-index: 10000;
     }
 
     &__button {
