--- a/src/styles/components/assignmentelement.scss
+++ b/src/styles/components/assignmentelement.scss
@@ -1,20 +1,16 @@
 .c-assignmentelements {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-items: center;
-    gap: 2rem;
+    grid-template-columns: 1fr;
+    gap: 2.5rem;
 }
 
 .c-assignmentelement {
     position: relative;
     border: 1px solid var(--global-x-light);
     background: var(--global-dark);
-    display: flex;
-    justify-content: center;
-    height: 5rem;
+    // height: 5rem;
     width: calc(100% - calc(3rem + 2px));
     border-radius: 0.5rem;
-    cursor: pointer;
     padding: 1.5rem;
 
     &__container {
@@ -63,9 +59,10 @@
     &-add {
         border: 1px dashed var(--global-x-light);
         background: none;
-    }
+        cursor: pointer;
 
-    &:hover {
-        opacity: 0.8;
+        &:hover {
+            opacity: 0.8;
+        }
     }
 }
