--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -63,14 +63,33 @@
         border-radius: 0.4rem;
         cursor: pointer;
 
+        &-open {
+            width: calc(100% - calc(2.5rem + 4px));
+            justify-content: flex-start;
+            padding: 0 0.25rem;
+
+            span {
+                color: var(--global-light);
+                margin-left: 0.5rem;
+            }
+        }
+
         &-selected {
             stroke: var(--global-xx-light);
             background: var(--global-x-dark);
+            
+            span {
+                color: var(--global-xx-light);
+            }
         }
 
         &-alpha {
             stroke: var(--global-xx-light);
             background: var(--global-alpha);
+            
+            span {
+                color: var(--global-xx-light);
+            }
         }
 
         &-orange {
