--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -11,6 +11,35 @@
     background: var(--global-xx-dark);
     box-shadow: rgba(0, 0, 0, 0.24) 3px 0px 8px;
 
+    &__button {
+        all: unset;
+        position: absolute;
+        top: 1.5rem;
+        right: -2.5rem;
+        width: 2rem;
+        height: 2rem;
+        border-radius: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: var(--global-dark);
+        cursor: pointer;
+        
+        svg {
+            stroke: var(--global-xx-light);
+        }
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+    &__section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     &__profile {
         background: var(--global-dark);
         width: 3.5rem;
@@ -45,6 +74,53 @@
             padding: 0.25rem 1rem;
             border-radius: 0.4rem;
             border: 2px solid var(--global-light);
+        }
+    }
+
+    &__open {
+        width: 12rem;
+        align-items: flex-start;
+
+        .c-navbar {
+            &__logo {
+                margin-left: 1rem;
+                margin-bottom: 2rem;
+            }
+
+            &__section {
+                display: block;
+                width: 100%;
+            }
+
+            &__avatar {
+                margin-right: 0.75rem;
+            }
+
+            &__profile {
+                width: 100%;
+                margin: 0 !important;
+
+                &-name {
+                    margin: 0;
+                }
+                
+                &-settings {
+                    margin: 0;
+                    color: var(--global-light);
+                    font-size: 0.75rem;
+                }
+            }
+
+            &__element {
+                display: flex;
+                align-items: center;
+                margin: 0 1rem 1rem;
+                // margin-left: 1rem;
+
+                &:hover::after {
+                    content: none;
+                }
+            }
         }
     }
 }
