Bug fixes and added alerts

--- a/src/styles/elements/root.scss
+++ b/src/styles/elements/root.scss
@@ -17,4 +17,13 @@
     --global-opacity-popup: rgba(23, 24, 26, 0.9);
 
     --global-focus-border: 2px solid var(--global-alpha);
+
+    --global-success-text: #155724;
+    --global-success: #d4edda;
+
+    --global-warning-text: #856404;
+    --global-warning: #fff3cd;
+
+    --global-error-text: #721c24;
+    --global-error: #f8d7da;
 }
