--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -19,6 +19,7 @@
 
 
 // components
+@import "./components/alert.scss";
 @import "./components/button.scss";
 @import "./components/select.scss";
 @import "./components/navbar.scss";
