Added preperation for levels

--- a/src/styles/elements/root.scss
+++ b/src/styles/elements/root.scss
@@ -8,6 +8,8 @@
     --global-x-dark: #2C2D30;
     --global-xx-dark: #17181A;
     --global-xxx-dark: #151617;
+    
+    --global-green: #54CC80;
 
     --global-red: #FF2D26;
     --global-opacity-red: rgba(255, 45, 38, 0.1);
