--- a/src/styles/utilities/color.scss
+++ b/src/styles/utilities/color.scss
@@ -13,3 +13,15 @@
 .u-color-orange {
     color: var(--global-orange);
 }
+
+.u-color-green {
+    color: var(--global-green);
+}
+
+.u-color-orange {
+    color: var(--global-orange);
+}
+
+.u-color-red {
+    color: var(--global-red);
+}
