--- a/src/styles/utilities/margin.scss
+++ b/src/styles/utilities/margin.scss
@@ -6,6 +6,14 @@
     margin-top: 4rem;
 }
 
+.u-margin-top-lg {
+    margin-top: 2rem;
+}
+
+.u-margin-top-x-md {
+    margin-top: 1.5rem;
+}
+
 .u-margin-top-md {
     margin-top: 1rem;
 }
