--- a/src/styles/utilities/margin.scss
+++ b/src/styles/utilities/margin.scss
@@ -2,6 +2,14 @@
     margin: 0;
 }
 
+.u-margin-left-navbar {
+    margin-left: 3.5rem;
+}
+
+.u-margin-left-navbar-button {
+    margin-left: 2.5rem;
+}
+
 .u-margin-top-x-lg {
     margin-top: 4rem;
 }
