Added some styling for levels

--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -24,6 +24,7 @@
 @import "./components/select.scss";
 @import "./components/navbar.scss";
 @import "./components/input.scss";
+@import "./components/textarea.scss";
 @import "./components/link.scss";
 @import "./components/switch.scss";
 @import "./components/header.scss";
@@ -32,6 +33,7 @@
 @import "./components/assignmentelement.scss";
 @import "./components/popup.scss";
 @import "./components/block.scss";
+@import "./components/level.scss";
 
 @import "./components/test.scss";
 
