Added monaco editor

--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -34,6 +34,7 @@
 @import "./components/popup.scss";
 @import "./components/block.scss";
 @import "./components/level.scss";
+@import "./components/editor.scss";
 
 @import "./components/test.scss";
 
