--- a/src/styles/utilities/margin.scss
+++ b/src/styles/utilities/margin.scss
@@ -42,6 +42,10 @@
     margin-bottom: 1rem;
 }
 
+.u-margin-bottom-sm {
+    margin-bottom: 0.5rem;
+}
+
 .u-margin-right-x-lg {
     margin-right: 4rem;
 }
