--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     background: var(--global-xx-dark);
     box-shadow: rgba(0, 0, 0, 0.24) 3px 0px 8px;
+    z-index: 1000;
 
     &__button {
         all: unset;
