--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -35,6 +35,7 @@
 @import "./components/block.scss";
 @import "./components/level.scss";
 @import "./components/editor.scss";
+@import "./components/livepreview.scss";
 
 @import "./components/test.scss";
 
