--- a/src/styles/components/level.scss
+++ b/src/styles/components/level.scss
@@ -13,7 +13,8 @@
     }
 
     &__information {
-        margin: 1rem 1rem 1rem 3rem;
+        // margin: 1rem 1rem 1rem 3rem;
+        margin: 1rem;
     }
 
     &__category {
