--- a/src/styles/utilities/flex.scss
+++ b/src/styles/utilities/flex.scss
@@ -6,9 +6,9 @@
     align-items: center;
 }
 
-// .u-align-start {
-//     align-items: flex-start;
-// }
+.u-align-start {
+    align-items: flex-start;
+}
 
 .u-justify-center {
     justify-content: center;
