Update scoring and some style fixes

--- a/src/styles/components/level.scss
+++ b/src/styles/components/level.scss
@@ -2,7 +2,7 @@
     &__container {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 18rem 1fr;
+        grid-template-rows: 1fr 6fr;
         height: 100vh;
         overflow: hidden;
     }
