--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -36,6 +36,7 @@
 @import "./components/level.scss";
 @import "./components/editor.scss";
 @import "./components/livepreview.scss";
+@import "./components/progressbar.scss";
 
 @import "./components/test.scss";
 
