--- a/src/styles/components/classelement.scss
+++ b/src/styles/components/classelement.scss
@@ -1,8 +1,7 @@
 .c-classelements {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-items: center;
-    gap: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .c-classelement {
@@ -17,6 +16,7 @@
     width: 12rem;
     border-radius: 0.5rem;
     cursor: pointer;
+    margin-bottom: 2rem;
 
     &__container {
         position: relative;
@@ -57,5 +57,18 @@
 
     &:hover {
         opacity: 0.8;
+    }
+}
+
+@media screen and (min-width: 46rem) {
+    .c-classelements {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+        gap: 2rem;
+    }
+
+    .c-classelement {
+        margin-bottom: 0;
     }
 }
