--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -4,6 +4,7 @@
     &__title {
         margin: 0;
         font-weight: 400;
+        font-size: 1.5rem;
     }
 
     &__ruler {
@@ -23,6 +24,14 @@
             height: 0.4rem;
             border-radius: 0.2rem;
             background: var(--global-dark);
+        }
+    }
+}
+
+@media screen and (min-width: 33rem) {
+    .c-header {
+        &__title {
+            font-size: 2rem;
         }
     }
 }
