--- a/src/styles/components/popup.scss
+++ b/src/styles/components/popup.scss
@@ -5,6 +5,7 @@
     padding: 1.5rem;
     width: 20rem;
     border-radius: 0.5rem;
+    margin: 0 2rem;
 
     &__container {
         position: fixed;
