--- a/src/styles/components/userelement.scss
+++ b/src/styles/components/userelement.scss
@@ -1,8 +1,7 @@
 .c-userelements {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
-    gap: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .c-userelement {
@@ -17,6 +16,7 @@
     width: 10rem;
     border-radius: 0.5rem;
     cursor: pointer;
+    margin-bottom: 2rem;
 
     &__container {
         position: relative;
@@ -71,5 +71,18 @@
 
     &:hover {
         opacity: 0.8;
+    }
+}
+
+@media screen and (min-width: 53rem) {
+    .c-userelements {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
+        gap: 2rem;
+    }
+
+    .c-userelement {
+        margin-bottom: 0;
     }
 }
