--- a/src/styles/elements/container.scss
+++ b/src/styles/elements/container.scss
@@ -1,10 +1,17 @@
 .e-container {
-    max-width: 52rem;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 0 2.5rem;
 
     &__small {
         max-width: 20rem;
         margin: 0 auto;
         text-align: center;
+    }
+}
+
+@media screen and (min-width: 60rem) {
+    .e-container {
+        max-width: 52rem;
+        margin: 0 auto;
     }
 }
