Added some details and cleanup

--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -43,14 +43,6 @@
         padding: 0.5rem 1rem;
         white-space: nowrap;
         cursor: pointer;
-
-        &-orange {
-            background: var(--global-orange);
-        }
-
-        &-green {
-            background: var(--global-green);
-        }
         
         &:hover {
             opacity: 0.9;
@@ -59,6 +51,24 @@
         &:focus {
             // TODO
             box-shadow: 0 0 4px 2px var(--global-red);
+        }
+
+        &-orange {
+            background: var(--global-orange);
+
+            &:focus {
+                // TODO
+                box-shadow: 0 0 4px 2px var(--global-orange);
+            }
+        }
+
+        &-green {
+            background: var(--global-green);
+
+            &:focus {
+                // TODO
+                box-shadow: 0 0 4px 2px var(--global-green);
+            }
         }
     }
 
