--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -90,6 +90,7 @@
             left: 3rem;
             top: 0;
             white-space: nowrap;
+            color: var(--global-xx-light);
             background: var(--global-xx-dark);
             padding: 0.25rem 1rem;
             border-radius: 0.4rem;
