--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -18,6 +18,7 @@
 
 
 // components
+@import "./components/loading.scss";
 @import "./components/alert.scss";
 @import "./components/button.scss";
 @import "./components/select.scss";
